--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.6",
+    "@angular/cdk": "^12.0.0",
     "@angular/common": "~11.2.6",
     "@angular/compiler": "~11.2.6",
     "@angular/core": "~11.2.6",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~11.2.6",
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
